<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/scroll"
    android:fillViewport="true"
    tools:context=".Activity.DetailsNote">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <EditText
            android:id="@+id/title_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:fontFamily="@font/adamina"
            android:hint="@string/hint_title"
            android:inputType="textMultiLine"
            android:text="hiovhaihsdvihaihviahivhaiovhiahvihaiohviahivohaihviahiva"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/text_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autoText="false"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/adamina"
            android:freezesText="false"
            android:gravity="start|top"
            android:hint="@string/hint_text"
            android:inputType="textMultiLine"
            android:lineSpacingExtra="10sp"
            android:nestedScrollingEnabled="false"
            android:singleLine="false"
            android:text="haihfiashifhjfhhdofhdsaohjhjkashjhcasdhfjahsjkshjsjhajkasjkhfjkashjkfhjasdhjfhajshfjashcjkasgivgagiusgdigsidg hjauishcusagca hiohihihih"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_details" />

        <ImageView
            android:id="@+id/image_save"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="16dp"
            android:background="@color/light_blue"
            android:elevation="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/kill_button"
            app:layout_constraintTop_toBottomOf="@+id/text_details"
            app:srcCompat="@drawable/baseline_save_alt_36" />

        <ImageView
            android:id="@+id/kill_button"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="45dp"
            android:background="@color/mylightread"
            android:elevation="12dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toStartOf="@+id/image_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_details"
            app:srcCompat="@drawable/baseline_delete_36" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>